--- a/package.json
+++ b/package.json
@@ -1,20 +1,20 @@
 {
   "name": "cypress-cucumber-e2e-test",
   "version": "1.0.0",
-  "description": "Projeto base para testes e2e em cypress e cucumber",
+  "description": "Projeto base para testes E2E em Cypress com Cucumber",
   "main": "index.js",
   "scripts": {
-    "cypress:headless": "cypress run --headless --env tags=@e2e",
+    "cypress:run": "cypress run --headless --browser chrome --env ENV=dev tags=@e2e",
     "cypress:open": "cypress open",
     "cypress:open-tag": "cypress open --env tags=@e2e",
-    "generate-report": "node ./cypress/support/multiple-cucumber-html-reporter.js"
+    "generate-local-report": "node ./cypress/support/multiple-cucumber-html-reporter.js"
   },
   "author": "Jonathan Teixeira Anzolini",
   "license": "ISC",
   "devDependencies": {
-    "@badeball/cypress-cucumber-preprocessor": "^13.0.2",
+    "@badeball/cypress-cucumber-preprocessor": "^20.1.2",
     "@bahmutov/cypress-esbuild-preprocessor": "^2.1.5",
-    "cypress": "^10.2.0",
+    "cypress": "13.13.2",
     "esbuild": "0.19.11",
     "faker-br": "^0.4.1",
     "multiple-cucumber-html-reporter": "^3.0.1"
